# legalbench

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/.dev_commands/: aw.md  debug.md  log.md  system-health.md
.claude/.dev_skills/claude-agent/: SKILL.md
.claude/.dev_skills/claude-agent/references/: api_patterns.md  configuration.md  skills_integration.md
.claude/.dev_skills/claude-agent/scripts/: custom_tools.py  production_patterns.py  quick_start.py
.claude/.legal_commands/: README.md  daily-rollup.md  maite-cost.md  maite-skills.md  sessions.md
.claude/agents/: dev_claude_sdk_expert.md  legal-document-editor.md  slash-command-creator.md
.claude/commands/: cleanup.md  code-review.md  marco.md  prd.md  refresh-context.md  understand.md  update_claude_docs.md
.claude/skills/: README.md
.claude/skills/civil-procedure/: SKILL.md
.claude/skills/civil-procedure/references/: frap_rules.md  frcp_rules.md  supreme_court_rules.md
.claude/skills/civil-procedure/scripts/: deadline_calculator.py
.cursor/rules/: agent-evaluation-architecture.mdc  claude-agent.mdc  legalbench-tasks-and-prompts.mdc  project-structure.mdc  python-coding-standards.mdc
.docs/: claude-python-sdk.md  legalbench_implementation_alpha.md
.plans/: maite-agent-evaluation-system.md
legalbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
